welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: not found: type ==
	if (c:Color == color.pink)
                    ^SlugSnail:10: error: value Color is not a member of java.awt.Color
		 if (c.Color == color.pink)
                       ^